--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,13 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "^7.1.0",
-    "@react-oauth/google": "^0.12.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.1.3",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.522.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
