--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,6 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -21,9 +20,11 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
-    "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
