--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.1.3",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.522.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
